# NavierStokes-DG

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  driver.cpp  driver.h
include/DG_Element_2d/: DG_Element_2d.h
include/DG_Field_2d/: DG_Field_2d.h
include/Utilities/: DerivativeMatrix.h  Display.h  FluxMatrix.h  Inverse.h  LagrangePolynomials.h  LegendrePolynomial.h  LobattoIntegration.h  LobattoNodes.h  LobattoWeights.h  MassMatrix.h  NewtonRaphson.h  Ones.h  Plot.h  PolyDeriv.h  PolyEval.h  SolveAxb.h  SyntheticDivision.h  Transpose.h  Zeros.h
includes/DG_Element_2d/: DG_Element_2d.h
includes/DG_Field_2d/: DG_Field_2d.h
includes/Solvers/: AdvectionSolver.h
includes/Utilities/: DerivativeMatrix.h  Display.h  FluxMatrix.h  Inverse.h  LagrangePolynomials.h  LegendrePolynomial.h  LobattoIntegration.h  LobattoNodes.h  LobattoWeights.h  MassMatrix.h  Ones.h  Plot.h  PolyDeriv.h  PolyEval.h  PolynomialRoots.h  SolveAxb.h  Transpose.h  Zeros.h  l2Norm.h
src/: main.cpp
src/DG_Element_2d/: DG_Element_2d.cpp  DG_Element_2d.h
src/DG_Field_2d/: DG_Field_2d.cpp  DG_Field_2d.h
src/DG_OperatorMatrices_2d/: DerivativeMatrix.h  DerivativeMatrix.h~  FluxMatrix.h  FluxMatrix.h~  MassMatrix.h  MassMatrix.h~
src/Solvers/: AdvectionSolver.cpp
src/Utilities/: DerivativeMatrix.cpp  Display.cpp  Display.h  Display.hpp  Display.h~  FluxMatrix.cpp  Inverse.cpp  Inverse.h  Inverse.hpp  Inverse.h~  LagrangePolynomials.cpp  LagrangePolynomials.h  LagrangePolynomials.hpp  LagrangePolynomials.h~  LegendrePolynomial.cpp  LobattoNodes.h  (+46 more)
tests/: README.md
(+2 files in other folders)
